# statechum

./: .classpath  .fatjar  .gitattributes  .gitignore  .project  20_states_reference.txt  README.md  build.xml  curr.xml  ex.xml  finalize_textbox  functions  jr.sh  log.txt  origGraph_P1061-P1001.xml  promelaMachine  strings_4k.xml  testInput  wekaoutput.arff  wekaoutput2.arff
ErlangExamples/WibbleMonster/: wibble.erl
ErlangExamples/event/: event.erl
ErlangExamples/exporter/: exporter.erl
ErlangExamples/frequency/: ff4.txt  ff5.txt  frequency.erl  frequencyBroken.erl  frequencyFixed.erl  frequency_iface.erl
ErlangExamples/locker/: locker.erl
ErlangOracle/: erlcovermap.sh  erlinittraces.sh  erlscript.sh  export_wrapper.erl  gen_event_wrapper.erl  gen_fsm_wrapper.erl  gen_server_wrapper.erl  inferer2_test.erl  sortpump.erl  testmod1.erl  testmod2.erl  tracer.erl  tracer2.erl  tracer3.erl  tracer_coverage.erl  tracerunner.erl  tracerunner.hrl
JavaOracle/: egtest.txt
NightTrain/: finished.sh  learner.sh  machines  submit.sh
exp1/: .project  origGraph_P1002-P1001.xml  origGraph_P1029-P1001.xml
exp1/NightTrain/: learner.sh
exp1/linear/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  fullrebuild.sh  solver.h
exp1/resources/: DiffExperimentLogs.xml  aseExample  ctas  demo3.txt  eclipse_dict.txt  jhotdrawexample  part1.trcxml  part3.trcxml  part5Temp.xml  smtExample  testgraph.txt
exp1/smt/: Makefile.am  Makefile.in  bootstrap  smt.h  yices_caller.c
exp1/statechum/: AllTests.java  Configuration.java  DeterministicDirectedSparseGraph.java  GlobalConfiguration.java  JUConstants.java  Pair.java  StringVertex.java
htdocs/: index.html  sample.swf
iceberg/: build.xml  checkcpu.sh  defaultjobparameters.sh  executionTimeScale-othercpus.map  executionTimeScale.map  getcpu.sh  readme.txt  run.sh  runase2014.sh  runbenchmark.sh  runcomparison.sh  runedsmmarkov.sh  runexperiment.sh  runfase2015.sh  runlearnercomparison.sh  runlearnerevaluation.sh  runmatrixevaluation.sh  runpremerge.sh  runsmallvshuge.sh  w-runbenchmark.sh  w-runedsmmarkov.sh  w-runlearnercomparison.sh  w-runlearnerevaluation.sh  w-runmatrixevaluation.sh  w-runpremerge.sh  w-runsmallvshuge.sh  worker-runlearnercomparison.sh  worker-runsmallvshuge.sh
lib/closest_neighbour_c/: ClosestNeighbour.cpp
lib/ltl2ba-1.1/: Makefile  Makefile.win64  README  alternating.c  buchi.c  cache.c  generalized.c  lex.c  ltl2ba.h  main.c  mem.c  parse.c  rewrt.c  set.c  trans.c
lib/modified_typer/: typer.erl  typer_annotator_s.erl  typer_info_s.erl  typer_map_s.erl  typer_otp.erl  typer_preprocess_s.erl  typer_s.erl  typer_s.hrl
lib/synapse/: synapse.hrl  synapselauncher.erl  test_diff.erl  test_fsmlearn.erl  test_fsmparse.erl  test_parsetypemap.erl  testsynapse.erl  testsynapse_learn.erl  testsynapselauncher.erl
linear/: AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  bootstrap  configure  configure.ac  configure.in  fullrebuild.sh  solver.h  umfsolver.c
linear/m4/: ac_jni_include_dir.m4  acx_blas.m4  acx_pthread.m4  acx_umfpack.m4  acx_yices.m4
newQuestioning/: .project
newQuestioning/statechum/: JUConstants.java  StateChum.java
resources/: 1.xml  3.trcxml  ArtsThompson.txt  CVS.txt  DiffExperimentLogs.xml  TestLearnFromTracesUsingMarkov.xml  alltraces2  ans2.txt  answers.txt  argoumltrace  aseExample  aseQuestionsAndAnswers  autoA.txt  autoB.txt  characteristic1.trcxml  coverage.trcxml  ctas  ctas_ltl  cvsLTL  cvsgraph  demo1.txt  demo2.txt  demo2Answers.txt  demo3.txt  demo3Answers.txt  demo4.txt  demo4Answers.txt  demo_ktails.txt  devProcess  earlier_failure.txt  earlier_failure2.txt  eclipse_dict.txt  extend  failedmerge_A_B.xml  failing.out  figure_tool  finalize_textbox  graph.txt  hotdraw  jHotDrawMappings.txt  (+26 more)
resources/25-2/: N_1687  N_2117  N_2282  N_237  N_244  N_2451  N_2557  N_2930  N_853  N_934
resources/25-4/: N_2103  N_2552  N_3693  N_4473  N_463
resources/25-6/: N_1014  N_1120  N_1247  N_2346  N_2843  N_4961
resources/5-2/: N_1129  N_3144  N_3434  N_516  N_619  input-5-2.xls
resources/5-4/: N_1892  N_2056  N_2425  N_2439  N_3567  N_4428  N_4990  N_716  N_738
resources/5-6/: N_2615  N_3994  N_518  input.xls
resources/50-2/: N_1385  N_1450  N_1542  N_2123  N_2967  N_3337  N_4118  N_545  N_943  N_975
resources/50-4/: N_3193  N_3204
resources/50-6/: N_1323  N_3346  N_4187  N_4824  N_716
resources/75-2/: N_4694  N_500  input.xls
resources/75-6/: N_1329  N_1607  N_1738  N_2070  N_2232  N_2619  N_4491  N_936
resources/LargeGraphs/: experiment_500.xml  experiment_501.xml
resources/TestGraphs/: NeilData2.xls
resources/comparison/: icgiExample.xml
resources/daikonTraces/: singleScenario
resources/demo_ktails/: demo_ktails.odt
resources/eclipse-lauch_configurations/: ExperimentPaperUAS2-collect results.launch  ExperimentPaperUAS2-count tasks.launch  ExperimentPaperUAS2-run_parallel.launch  ExperimentPaperUAS2-run_sequential.launch  MarkovExperiment - REPORT_TASKPARAMETERS.launch  MarkovExperiment - RUN_SEQUENTIAL.launch  MarkovExperiment - count tasks.launch  New_configuration (2).launch  New_configuration.launch  SmallVsHuge-collect results.launch  SmallVsHuge-count tasks.launch  SmallVsHuge-run parallel 3.launch  SmallVsHuge-run parallel.launch  SmallVsHuge-run sequential.launch  SmallVsHuge-task parameters.launch  TestMergeStatistics.launch  TestVector.launch  benchmarkCPU - compute benchmark.launch  paperUAS2 - count_tasks.launch  (+9 more)
smt/: AUTHORS  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  bootstrap  configure  configure.ac  configure.in  fullrebuild.sh  libyices.def  smt.h  yices_caller.c
statechum/: AllTests.java  ArrayOperations.java  Configuration.java  DeterministicDirectedSparseGraph.java  GlobalConfiguration.java  Helper.java  JUConstants.java  Pair.java  PrefixTraceTree.java  StateChum.java  StatechumXML.java  StringVertex.java  TestArrayOperations.java  TestConfiguration.java  Test_AttributeMutator.java  Trace.java  XMachineViewer.java
tests/: AllTests.java
trunk/: .classpath  .project  build.xml
web/: index.html
(+2411 files in other folders)
